Add body section to index.html
The color palette technique relies on data-palette attribute.
Sets the default value to '0'.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <title>Color Switch</title>
 <link rel="stylesheet" type="text/css"/>
-<script src="code.js></script>
+<script src="code.js"></script>
 </head>
-*** STEP 2 HERE
+  <body data-palette="0">
+  *** STEP 2 HERE
+  </body>
 </html>
