Add heading and button
Apply unique ID to button to enable JavaScript functionality.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="code.js"></script>
 </head>
   <body data-palette="0">
-  *** STEP 2 HERE
+    <h1>Color Me!</h1>
+    <button id="toggle">Click me</button>
   </body>
 </html>
