Add js folder and reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Color Switch</title>
 <link rel="stylesheet" type="text/css"/>
-<script src="code.js"></script>
+<script src="js/code.js"></script>
 </head>
   <body data-palette="0">
     <h1>Color Me!</h1>
