--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Color Switch</title>
-<link rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="css/main.css"/>
 <script src="js/code.js"></script>
 </head>
   <body data-palette="0">
